# goit-pythonweb-hw-012

./: Dockerfile  README.md  docker-compose.yml  env.example  main.py  pyproject.toml
docs/: conf.py
docs/_build/doctrees/: environment.pickle  index.doctree
docs/_build/html/: .buildinfo  genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js
docs/_build/html/_sources/: index.rst.txt
src/api/: auth.py  contacts.py  users.py  utils.py
src/conf/: config.py
src/database/: db.py  models.py
src/repository/: contacts.py  users.py
src/schemas/: contacts.py
src/services/: auth.py  cache.py  contacts.py  email.py  upload_file.py  users.py
src/services/templates/: update_password.html
src/utils/: constants.py
tests/: conftest.py  test_integration_auth.py  test_integration_contacts.py  test_integration_users.py  test_integration_utils.py  test_unit_repository_contact.py  test_unit_repository_user.py
